name:                 zip
version:              0.2.0
cabal-version:        >= 1.18
tested-with:          GHC==7.10.3, GHC==8.0.2, GHC==8.2.1
license:              BSD3
license-file:         LICENSE.md
author:               Mark Karpov <markkarpov92@gmail.com>
maintainer:           Mark Karpov <markkarpov92@gmail.com>
homepage:             https://github.com/mrkkrp/zip
bug-reports:          https://github.com/mrkkrp/zip/issues
category:             Codec
synopsis:             Operations on zip archives
build-type:           Simple
description:          Operations on zip archives.
extra-doc-files:      CHANGELOG.md
                    , README.md

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

library
  build-depends:      base             >= 4.8     && < 5.0
                    , bytestring       >= 0.9     && < 0.11
                    , bzlib-conduit    >= 0.2     && < 0.3
                    , case-insensitive >= 1.2.0.2 && < 1.3
                    , cereal           >= 0.3     && < 0.6
                    , conduit          >= 1.2.8   && < 2.0
                    , conduit-extra    >= 1.1     && < 2.0
                    , containers       >= 0.5.6.2 && < 0.6
                    , digest           < 0.1
                    , exceptions       >= 0.6     && < 0.9
                    , filepath         >= 1.2     && < 1.5
                    , monad-control    >= 1.0     && < 1.1
                    , mtl              >= 2.0     && < 3.0
                    , path             >= 0.5     && < 0.7
                    , path-io          >= 1.0.1   && < 2.0
                    , plan-b           >= 0.2     && < 0.3
                    , resourcet        >= 1.0     && < 2.0
                    , text             >= 0.2     && < 1.3
                    , time             >= 1.4     && < 1.9
                    , transformers     >= 0.4     && < 0.6
                    , transformers-base
  if !impl(ghc >= 8.0)
    build-depends:    semigroups       >= 0.16
  default-extensions: RecordWildCards
                    , TupleSections
  exposed-modules:    Codec.Archive.Zip
                    , Codec.Archive.Zip.CP437
                    , Codec.Archive.Zip.Type
  other-modules:      Codec.Archive.Zip.Internal
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010

test-suite tests
  main-is:            Main.hs
  hs-source-dirs:     tests
  type:               exitcode-stdio-1.0
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  build-depends:      base             >= 4.8     && < 5.0
                    , bytestring       >= 0.9     && < 0.11
                    , conduit          >= 1.2.8   && < 2.0
                    , containers       >= 0.5.6.2 && < 0.6
                    , exceptions       >= 0.6     && < 0.9
                    , filepath         >= 1.2     && < 1.5
                    , QuickCheck       >= 2.4     && < 3.0
                    , hspec            >= 2.0     && < 3.0
                    , path             >= 0.5     && < 0.7
                    , path-io          >= 1.0.1   && < 2.0
                    , text             >= 0.2     && < 1.3
                    , time             >= 1.4     && < 1.9
                    , transformers     >= 0.4     && < 0.6
                    , zip
  default-language:   Haskell2010

source-repository head
  type:               git
  location:           https://github.com/mrkkrp/zip.git
